--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,3 +10,14 @@ jobs:
       - uses: actions/checkout@v4
       - name: "nocommit checker"
         uses: nobssoftware/nocommit@v2
+
+  check:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Install Nix
+        uses: DeterminateSystems/nix-installer-action@v9
+      - name: Configure Nix cache
+        uses: DeterminateSystems/magic-nix-cache-action@main
+      - run: nix flake check
