--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "brrr"
-version = "0.0.4"
+version = "0.0.5.dev"
 description = "Horizontally scalable workflow scheduling with pluggable backends"
 authors = [
     {name = "Robin", email = "robin.lewis@anterior.com"},
