--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ readme = "README.md"
 requires-python = "<4,>=3.12"
 dependencies = []
 
+[project.urls]
+homepage = "https://github.com/nobssoftware/brrr"
+
 [dependency-groups]
 dev = [
     "pyright>=1.1.389",
