--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dev = [
     "types-aioboto3[essential]>=13.3.0.post1",
     "pytest-asyncio>=0.25.0",
     "aiohttp>=3.11.11",
+    "pytest-timeout>=2.3.1",
 ]
 
 [build-system]
@@ -31,3 +32,4 @@ build-backend = "hatchling.build"
 
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
+timeout = 10
