test: dynamo dependency for integration tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,3 +33,6 @@ build-backend = "hatchling.build"
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
 timeout = 10
+markers = [
+    "dependencies: requires external store / queue dependencies running"
+]
