--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -28,6 +28,7 @@ dev = [
     "pytest-stub>=1.1.0",
     "types-aiobotocore-dynamodb>=2.18.0",
     "asyncio-redis>=0.16.0",
+    "mypy>=1.15.0",
 ]
 
 [build-system]
