--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -5,6 +5,7 @@ description = "Horizontally scalable workflow scheduling with pluggable backends
 authors = [
     { name = "Robin", email = "robin.lewis@anterior.com" },
     { name = "Jesse Zwaan", email = "j.k.zwaan@gmail.com" },
+    { name = "Anterior", email = "tech@anterior.com" },
 ]
 requires-python = "<4,>=3.12"
 dependencies = []
