--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,12 +16,16 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      - uses: cachix/install-nix-action@v30
+      - uses: cachix/install-nix-action@v31
         with:
           enable_kvm: true
           extra_nix_config: "system-features = nixos-test benchmark big-parallel kvm"
-      - name: Configure Nix cache
-        uses: DeterminateSystems/magic-nix-cache-action@main
+      # Our private cache, feel free to substitute in a fork
+      - uses: cachix/cachix-action@v16
+        with:
+          name: anterior-private
+          signingKey: '${{ secrets.CACHIX_SIGNING_KEY }}'
+          authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
       - run: nix flake check -L --keep-going
 
   # Ensure nix flake show isn’t broken
@@ -30,6 +34,7 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+      # Use a different nix installer for safety
       - name: Install Nix
         uses: DeterminateSystems/nix-installer-action@v9
       # No need for a cache
