--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -24,6 +24,10 @@ dev = [
     "pytest-asyncio>=0.25.0",
     "aiohttp>=3.11.11",
     "pytest-timeout>=2.3.1",
+    "types-redis>=4.6.0.20241004",
+    "pytest-stub>=1.1.0",
+    "types-aiobotocore-dynamodb>=2.18.0",
+    "asyncio-redis>=0.16.0",
 ]
 
 [build-system]
