--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -26,7 +26,8 @@ jobs:
           name: anterior-private
           signingKey: '${{ secrets.CACHIX_SIGNING_KEY }}'
           authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
-      - run: nix flake check -L --keep-going
+      - run: |
+          nix run .#nix-flake-check-changed
 
   # Ensure nix flake show isn’t broken
   nix-flake-show:
