--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ data
 __pycache__
 result
 .direnv
+.DS_Store
 
 # Noise from dynamodb-local program in the working directory
 dynamodb-local-metadata.json
